syntax = "proto3";

package player.v1;

option csharp_namespace = "Server.Module.Player.GrpcContracts";

import "google/protobuf/guid.proto";

service PlayerService {
    rpc Get(google.protobuf.Guid) returns (PlayerDto);
    rpc Subscribe(google.protobuf.Guid) returns (stream PlayerDto);
}

message PlayerDto {
    string Name = 1;
    uint32 Health = 2;
    uint32 Hunger = 3;
    double PocketMoney = 4;
    uint32 Mood = 5;
}