syntax = "proto3";

package src.server.module.player.servermoduleplayergrpccontracts.v1;

option csharp_namespace = "Server.Module.Player.GrpcContracts.V1";

import "Player.proto";

service CreatePlayerService {
    rpc Create(CreatePlayerCommand) returns (PlayerDto);
}

message CreatePlayerCommand {
    string name = 1;
}

